--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -5,7 +5,7 @@
     "rewrites": [
       {
         "source": "/api/:path*",
-        "destination": "https://form-app-backend-5q1uyq6k6-all1nols-projects.vercel.app/"
+       "destination": "https://form-app-api-eosin.vercel.app/api/:path*"
       }
     ]
   }
