--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,1 @@
-REACT_APP_API_URL=
-- **Backend Deployment Link**: `https://form-k57etj1zu-all1nols-projects.vercel.app`
+REACT_APP_API_URL=https://form-k57etj1zu-all1nols-projects.vercel.app
