--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
-    "yup": "^1.5.0",
-    "serve": "^14.0.0"
+    "yup": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
