--- a/frontend/render.yaml
+++ b/frontend/render.yaml
@@ -11,4 +11,5 @@ services:
     routes:
       - type: rewrite
         source: /*
-        destination: /index.html 
+        destination: /index.html
+    spa: true 
