--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-hook-form": "^7.54.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.0.2",
+    "react-scan": "^0.0.54",
     "react-scripts": "5.0.1",
     "yup": "^1.5.0"
   },
